solve scrollbar in firefox

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -11,7 +11,6 @@
 html {
   -ms-overflow-style: none;
   scrollbar-width: none;
-
   font-size: 16px;
 
   @media (max-width: 992px) {
@@ -47,6 +46,7 @@ $theme: #fff;
 .timeline {
   white-space: nowrap;
   overflow-x: auto;
+  scrollbar-color: transparent transparent;
 
   ol {
     font-size: 0;
